--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,2 +1,13 @@
 // less全局加载样式
 @import "./fonts.less";
+
+body{
+    background-color: #f5f7f9;
+}
+
+.page-nav-bar {
+    background-color: #3296fa;
+    .van-nav-bar__title,.van-icon {
+      color: #fff;
+    }
+  }
